# SpaceRoboticsChallenge

./: .gitmodules  robonaut_r5.xml
archive/val_object_detection/led_detector/: package.xml
klampt_gz/: CMakeLists.txt  ReadMe.md  package.xml
klampt_gz/include/klampt_gz_player/: klampt_gz_loader.h  klampt_gz_player.h
klampt_gz/launch/: test_pids.launch
klampt_gz/param/: pids.yaml
klampt_gz/scripts/: player
klampt_gz/src/: klampt_gz_loader.cc  klampt_gz_player.cc
klampt_gz/test/: harness.world  raise_arm.csv  smooth_walk.csv
klampt_gz/test/harness_box/: model.config  model.sdf
pose_pkg/: .setup_assistant  CMakeLists.txt  package.xml
pose_pkg/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  valkyrie.srdf
pose_pkg/launch/: Reachability_Matrix.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pose_rviz.rviz  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pose_pkg/src/: Reachability_Matrix.cpp
src_tasks/src_qual1/src/: LightDetector.cpp
src_tasks/src_task1/include/: val_circle.h
src_tasks/src_task1/src/: handle_detector.cpp  handle_grabber.cpp  move_handle.cpp  move_handle_node.cpp  pcl_handle_detector.cpp  test_catesian_planner.cpp  test_handle.cpp  test_move_handle.cpp  test_nextgoal.cpp  val_circle.cpp  val_task1.cpp  val_task1_utils.cpp
src_tasks/src_task2/src/: array_table_detector.cpp  button_detector.cpp  button_press.cpp  cable_detector.cpp  cable_task.cpp  insert_cable_node.cpp  plug_detector.cpp  solar_array_detector.cpp  solar_panel_grasp.cpp  val_rover_detection.cpp  val_rover_detection_node.cpp  val_solar_detection_node.cpp  val_solar_panel_detector.cpp  val_solar_panel_detector_node.cpp  val_task2.cpp  val_task2_utils.cpp
src_tasks/src_task3/src/: climb_stairs.cpp  door_opener.cpp  door_valve_detector.cpp  door_valve_detector_node.cpp  leak_detector.cpp  leak_detector_grabber.cpp  rotate_valve.cpp  stair_detector.cpp  steps_detector.cpp  table_detector.cpp  val_stairclimb.cpp  val_task3_utils.cpp
src_tasks/src_task_common/src/: check_goal_offset.cpp  finish_box_detector.cpp  panel_detection.cpp  panel_detection_node.cpp  push_object.cpp  test_nudgeOffset.cpp  trim_walkway_pointcloud.cpp  val_gaze_controller.cpp  val_seeds.cpp  val_task_common_utils.cpp
srcsim/: pose.txt
srcsim/launch/: stair_task.launch
srcsim/worlds/: door.stl  door_base.stl  stair.world
val_bringup/launch/: final1.launch  stair_env.launch  stairs.launch  static_frame.launch
val_bringup/scripts/: arm_demo.py  init.py
val_common/: CMakeLists.txt
val_common/include/val_common/: val_common_defines.h  val_common_names.h
val_common/scripts/: getVIGIRFootStepPlanner.sh  setuptemp.sh
val_control/: CMakeLists.txt
val_control/include/val_control/: val_arm_navigation.h
val_control/src/: test_arm_navigation.cpp  val_arm_navigation.cpp
val_controllers/: CMakeLists.txt  package.xml
val_controllers/config/: val_control.yaml
val_controllers/launch/: val_control.launch
val_description/: robonaut_r5.xml
val_description/model/robots/: valkyrie_sim.xacro
val_description/urdf/: valkyrie_sim.urdf
val_footstep_planner/: CMakeLists.txt  package.xml
val_footstep_planner/include/: foot_data.h  footstep_planner.h  miqqp.h
val_footstep_planner/src/: foot_data.cpp  footstep_planner.cpp  miqqp.cpp
val_gazebo/launch/: qual_task_2.launch  valkyrie_empty_world.launch
val_gazebo/worlds/: button_panel_1.STL  qual_task_2.world
val_gui/include/val_gui/: val_marker.h
val_gui/src/: val_gui.cpp  val_gui.ui  val_marker.cpp
val_klampt/: CMakeLists.txt  package.xml  robonaut_r5.xml
val_klampt/footstep_data/: arm1.hold  arm2.hold  legone.hold  legtwo.hold  startconfig.config
val_klampt/footstep_data (copy)/: legtwo.hold  startconfig.config
val_klampt/include/: limbstate.h  planner.h  robotlimbsstate.h  timeassignment.h  val_move_arm.h  val_single_step.h
val_klampt/src/: klampt_footstep.cpp  limbstate.cpp  planner.cpp  robotlimbsstate.cpp  timeassignment.cpp  val_move_arm.cpp  val_single_step.cpp
val_motion_planners/val_moveit/val_moveit_config/: .setup_assistant
val_motion_planners/val_moveit/val_moveit_tasks/: CMakeLists.txt
val_moveit_tasks/include/: test_circle.h
val_moveit_tasks/src/: test_circle.cpp  val_pose.cpp
val_navigation/val_3dfootstep/: CMakeLists.txt  package.xml
val_navigation/val_3dfootstep/config/: robot_params.yaml
val_navigation/val_3dfootstep/launch/: val_3dfootstep_planner.launch  val_3dterrian_classifier.launch
val_navigation/val_footstep/config/: footsteps_valkyrie.yaml  rviz_footstep_planning.rviz
val_perception/checkerboard/: CMakeLists.txt  README.md  package.xml
val_perception/checkerboard/models/checkerboard/: model.config  model.erb  model.sdf
val_perception/deep_detector/: CMakeLists.txt  package.xml
val_perception/deep_detector/data/: deploy.prototxt  info.json  original.prototxt  solver.prototxt  train_val.prototxt
val_perception/deep_detector/src/: DetectNet.h  deep_detector_test.cpp
val_perception/perception_common/: CMakeLists.txt  README.md
val_perception/val_filters/: CMakeLists.txt  package.xml
val_perception/val_laser2point_cloud/: CMakeLists.txt
val_rechability/: CMakeLists.txt  package.xml
val_rechability/config/: kinematics.yaml
val_rechability/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  pose_rviz.rviz  rechability_map_generator.launch  robotrviz.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
val_rechability/maps/: rechability.yaml
val_tasks/val_task1/: CMakeLists.txt  package.xml
val_tasks/val_task2/: CMakeLists.txt
(+93 files in other folders)
